Fine-tuning the SecurityConfig.java for development